--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -1,7 +1,11 @@
-<div class="flex flex-col py-6 bg-gray-100">
+<div class="flex flex-col h-full py-6 bg-gray-100">
   <div class="flex flex-col gap-4">
-    @for (categoriesProduct of categoriesProducts; track categoriesProduct; let
-    i = $index) {
+    @if(loading) {
+    <div class="flex bg-transparent px-6 items-center gap-2 justify-between">
+      <app-bar-spinner></app-bar-spinner>
+    </div>
+    }@else { @for (categoriesProduct of categoriesProducts; track
+    categoriesProduct; let i = $index) {
 
     <div>
       <div class="flex gap-5 items-center">
@@ -38,16 +42,67 @@
               @for(product of categoriesProduct.categoriesProducts; track
               product.id) {
               <div
+                (mouseenter)="onMouseEnter(product.id)"
+                (mouseleave)="onMouseLeave(product.id)"
                 class="w-56 bg-white shadow-md rounded-xl duration-500 hover:scale-105 hover:shadow-xl"
               >
-                <div>
+                <div class="relative">
                   <img
-                    src="
-              https://www.khandryfruit.com/cdn/shop/products/Buy-Quality-Australia-Almonds-Online--_1Kg-Pack_-Badam-Giri-Premium-Quality-khandryfruit-1675863011_750x810.webp?v=1683531192
-            "
+                    src="Organic.svg"
                     alt="Product"
                     class="h-52 w-72 object-cover rounded-t-xl"
                   />
+                  @if(iconsShowing.has(product.id)) {
+
+                  <div
+                    class="cursor-pointer icons-container"
+                    [@showHideIcons]="state"
+                  >
+                    <button
+                      [disabled]="loading"
+                      class="cursor-pointer bg-gray-100 px-3 pt-3 pb-1 rounded-md hover:px-4 hover:pt-4 hover:pb-2"
+                    >
+                      @if(wishedProducts.includes(product.id)) {
+                      <mat-icon
+                        (click)="onRemoveFromWhishlist(product.id)"
+                        aria-hidden="false"
+                        aria-label="Example close icon"
+                        fontIcon="close"
+                      ></mat-icon>
+                      } @else {
+                      <mat-icon
+                        (click)="onAddToWhishlist(product.id)"
+                        aria-hidden="false"
+                        aria-label="Example favorite icon"
+                        fontIcon="favorite"
+                      ></mat-icon>
+                      }
+                    </button>
+                    <button
+                      class="cursor-pointer bg-gray-100 px-3 pt-3 pb-1 rounded-md hover:px-4 hover:pt-4 hover:pb-2"
+                    >
+                      <mat-icon
+                        class=""
+                        (click)="onAddToCart(product)"
+                        aria-hidden="false"
+                        aria-label="Example local_mall icon"
+                        fontIcon="local_mall"
+                      ></mat-icon>
+                    </button>
+                    <button
+                      class="cursor-pointer bg-gray-100 px-3 pt-3 pb-1 rounded-md hover:px-4 hover:pt-4 hover:pb-2"
+                    >
+                      <mat-icon
+                        class=""
+                        (click)="onViewProduct(product.id)"
+                        aria-hidden="false"
+                        aria-label="Example visibility"
+                        fontIcon="visibility"
+                      ></mat-icon>
+                    </button>
+                  </div>
+                  }
+
                   <div class="px-3 py-1">
                     <p
                       routerLink="/cart"
@@ -68,7 +123,7 @@
                       <div class="ml-auto">
                         <mat-icon
                           class="cursor-pointer"
-                          (click)="onAddToCart(product.id)"
+                          (click)="onAddToCart(product)"
                           aria-hidden="false"
                           aria-label="Example shopping_cart icon"
                           fontIcon="shopping_cart"
@@ -104,6 +159,6 @@
         </div>
       </div>
     </div>
-    }
+    } }
   </div>
 </div>
