--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -17,16 +17,63 @@
     <div class="grid grid-cols-2 gap-6 lg:grid-cols-4 lg:gap-4">
       @for(categoryProduct of categoryProducts; track categoryProduct.id) {
       <div
+        (mouseenter)="onMouseEnter(categoryProduct.id)"
+        (mouseleave)="onMouseLeave(categoryProduct.id)"
         class="w-56 bg-white shadow-md rounded-xl duration-500 hover:scale-105 hover:shadow-xl"
       >
-        <div>
+        <div class="relative">
           <img
-            src="
-      https://www.khandryfruit.com/cdn/shop/products/Buy-Quality-Australia-Almonds-Online--_1Kg-Pack_-Badam-Giri-Premium-Quality-khandryfruit-1675863011_750x810.webp?v=1683531192
-    "
+            src="Organic.svg"
             alt="Product"
             class="h-52 w-72 object-cover rounded-t-xl"
           />
+          @if(iconsShowing.has(categoryProduct.id)) {
+
+          <div class="cursor-pointer icons-container" [@showHideIcons]="state">
+            <div
+              class="cursor-pointer bg-gray-100 px-3 pt-3 pb-1 rounded-md hover:px-4 hover:pt-4 hover:pb-2"
+            >
+              @if(wishedProducts.includes(categoryProduct.id)) {
+              <mat-icon
+                (click)="onRemoveFromWhishlist(categoryProduct.id)"
+                aria-hidden="false"
+                aria-label="Example close icon"
+                fontIcon="close"
+              ></mat-icon>
+              } @else {
+              <mat-icon
+                (click)="onAddToWhishlist(categoryProduct.id)"
+                aria-hidden="false"
+                aria-label="Example favorite icon"
+                fontIcon="favorite"
+              ></mat-icon>
+              }
+            </div>
+            <div
+              class="cursor-pointer bg-gray-100 px-3 pt-3 pb-1 rounded-md hover:px-4 hover:pt-4 hover:pb-2"
+            >
+              <mat-icon
+                class=""
+                (click)="onAddToCart(categoryProduct.id)"
+                aria-hidden="false"
+                aria-label="Example local_mall icon"
+                fontIcon="local_mall"
+              ></mat-icon>
+            </div>
+            <div
+              class="cursor-pointer bg-gray-100 px-3 pt-3 pb-1 rounded-md hover:px-4 hover:pt-4 hover:pb-2"
+            >
+              <mat-icon
+                class=""
+                (click)="onViewProduct(categoryProduct.id)"
+                aria-hidden="false"
+                aria-label="Example visibility"
+                fontIcon="visibility"
+              ></mat-icon>
+            </div>
+          </div>
+          }
+
           <div class="px-3 py-1">
             <p
               routerLink="/cart"
