--- a/src/app/check-out/check-out.component.css
+++ b/src/app/check-out/check-out.component.css
@@ -2,3 +2,30 @@
   @apply transform translate-y-0 opacity-100 visible;
   transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
 }
+.valid-checkout {
+  background-color: rgb(34 197 94);
+}
+
+.invalid-checkout {
+  background-color: rgb(134 239 172);
+  cursor: no-drop;
+}
+
+.valid-checkout:hover {
+  background-color: rgb(21 128 61);
+}
+
+.borderBlink {
+  border: 2px solid black;
+  animation: borderBlink 800ms step-end infinite;
+}
+
+@keyframes borderBlink {
+  from,
+  to {
+    border-color: inherit;
+  }
+  30% {
+    border-color: red;
+  }
+}
