--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,6 +1,6 @@
 <div class="bg-gray-100 py-6 px-6 h-full">
   <div class="flex gap-5 justify-between">
-    <div class="flex flex-col gap-5 bg-white p-6 rounded-lg w-3/4">
+    <div class="flex flex-col gap-5 bg-white p-6 rounded-lg w-full">
       <div class="flex gap-8">
         <a
           [routerLinkActiveOptions]="{ exact: true }"
@@ -23,7 +23,7 @@
       </div>
     </div>
 
-    <div class="flex flex-col gap-5 bg-white p-6 rounded-lg w-2/6">
+    <div class="flex flex-col gap-5 bg-white p-6 rounded-lg w-fit">
       <h2 class="text-2xl font-bold text-dark-blue">Account Details</h2>
 
       @if(loading) {
