--- a/src/app/new-product/new-product.component.html
+++ b/src/app/new-product/new-product.component.html
@@ -16,7 +16,7 @@
       >
         <div class="relative">
           <img
-            src="Organic.svg"
+            [src]="newProduct.productImages[0]"
             alt="Product"
             class="h-52 w-72 object-cover rounded-t-xl"
           />
@@ -57,7 +57,6 @@
               class="cursor-pointer bg-gray-100 px-3 pt-3 pb-1 rounded-md hover:px-4 hover:pt-4 hover:pb-2"
             >
               <mat-icon
-                class=""
                 (click)="onViewProduct(newProduct.id)"
                 aria-hidden="false"
                 aria-label="Example visibility"
