--- a/src/app/product/product.component.css
+++ b/src/app/product/product.component.css
@@ -1,3 +1,16 @@
+.valid-save {
+  background-color: rgb(21 128 61);
+}
+
+.invalid-save {
+  background-color: rgb(187 247 208);
+  cursor: no-drop;
+}
+
+.valid-save:hover {
+  background-color: rgb(34 197 94);
+}
+
 .carousel {
   position: relative;
   width: 100%;
